<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="enable_tip">Enable Tip</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="round_tip">Round tip?</string>
    <string name="calculate_tip">Calculate Total</string>
    <string name="invalid_bill_amount">Please enter a valid bill amount</string>
    <string name="result_format">Tip: ₱%.2f\nTotal: $%.2f</string>
</resources>